# trame-mnist

./: MANIFEST.in  README.rst  setup.cfg
bundles/docker/: README.md
bundles/docker/scripts/: build_image.sh  run_image.sh
bundles/docker/setup/: apps.yml  requirements.txt
data/: .gitignore  README.md
trame_ai_lenet_5/app/: controller.py  main.py  ui.py
trame_ai_lenet_5/app/engine/: __init__.py  chart_utils.py  charts.py  main.py  ml.py  utils.py
trame_ai_lenet_5/app/engine/ml/: __init__.py  prediction.py  xai.py
trame_ai_lenet_5/html/module/: __init__.py
trame_mnist/app/: controller.py  main.py  ui.py
trame_mnist/app/engine/: __init__.py  charts.py  main.py  utils.py
trame_mnist/app/engine/ml/: __init__.py  common.py  prediction.py  testing.py  training.py  xai.py
vue-components/: package.json  vue.config.js
