[metadata]
name = trame-ai-lenet-5
version = 1.0.0
description = Visualization exploration for AI/XAI
long_description = file: README.rst
author = Kitware Inc.
license = BSD License
classifiers =
    Development Status :: 1 - Planning
    Environment :: Web Environment
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame
    torch>=1.9.1
    altair==4.1.0
    torchvision>=0.10.0,<=0.10.1

[options.entry_points]
console_scripts =
    trame-ai-lenet-5 = trame_ai_lenet_5:main
