[metadata]
name = trame-mnist
version = 1.1.0
description = Visualization exploration for AI/XAI
long_description = file: README.rst
author = Kitware Inc.
license = BSD License
classifiers =
    Development Status :: 1 - Planning
    Environment :: Web Environment
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame
    # chart
    altair==4.1.0
    # ml core
    torch>=1.9.1
    torchvision>=0.10.0,<=0.10.1
    # xaitk
    smqtk-classifier==0.19.0
    smqtk-core==0.18.1
    smqtk-dataprovider==0.16.0
    smqtk-descriptors==0.18.1
    smqtk-image-io==0.16.2
    xaitk-saliency==0.4.0
    scikit-learn==0.24.2
    scikit-image==0.18.3

[options.entry_points]
console_scripts =
    trame-mnist = trame_mnist:main
